--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 
   <body>
     <main>
+      <header>
+        <div>
+          <a href="index.html"> uHost </a>
+        </div>
+        <nav>
+          <ul>
+            <li>
+              <a href="packages/index.html">Packages</a>
+            </li>
+            <li>
+              <a href="customers/index.html">Customers</a>
+            </li>
+            <li>
+              <a href="start-hosting/index.html">Start Hosting</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
       <section>
         <h1 id="product-overview">Get the freedom you deserve.</h1>
       </section>
