--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section>
         <h1 class="section-title">Choose your plans</h1>
         <div>
-          <article>
+          <article class="plan">
             <h1>FREE</h1>
             <h2>$0/month</h2>
             <h3>For hobby projects or small teams.</h3>
@@ -48,7 +48,7 @@
               <button>CHOOSE PLAN</button>
             </div>
           </article>
-          <article>
+          <article class="plan">
             <h1>RECOMMENDED</h1>
             <h1>PLUS</h1>
             <h2>$29/month</h2>
@@ -63,7 +63,7 @@
               <button>CHOOSE PLAN</button>
             </div>
           </article>
-          <article>
+          <article class="plan">
             <h1>PREMIUM</h1>
             <h2>$99/month</h2>
             <h3>Your enterprise solution.</h3>
