--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <h1 class="section-title">Choose your plans</h1>
         <div>
           <article class="plan">
-            <h1>FREE</h1>
-            <h2>$0/month</h2>
+            <h1 class="plan__title">FREE</h1>
+            <h2 class="plan__price">$0/month</h2>
             <h3>For hobby projects or small teams.</h3>
             <ul>
               <li>1 Workspace</li>
@@ -45,13 +45,13 @@
               <li>Basic Support</li>
             </ul>
             <div>
-              <button>CHOOSE PLAN</button>
+              <button class="plan__cta">CHOOSE PLAN</button>
             </div>
           </article>
           <article class="plan plan--recommended">
             <h1 class="plan__annotation">RECOMMENDED</h1>
-            <h1>PLUS</h1>
-            <h2>$29/month</h2>
+            <h1 class="plan__title">PLUS</h1>
+            <h2 class="plan__price">$29/month</h2>
             <h3>For ambitious projects.</h3>
             <ul>
               <li>5 Workspaces</li>
@@ -60,12 +60,12 @@
               <li>Plus Support</li>
             </ul>
             <div>
-              <button>CHOOSE PLAN</button>
+              <button class="plan__cta">CHOOSE PLAN</button>
             </div>
           </article>
           <article class="plan">
-            <h1>PREMIUM</h1>
-            <h2>$99/month</h2>
+            <h1 class="plan__title">PREMIUM</h1>
+            <h2 class="plan__price">$99/month</h2>
             <h3>Your enterprise solution.</h3>
             <ul>
               <li>10 Workspaces</li>
@@ -74,7 +74,7 @@
               <li>Priority Support</li>
             </ul>
             <div>
-              <button>CHOOSE PLAN</button>
+              <button class="plan__cta">CHOOSE PLAN</button>
             </div>
           </article>
         </div>
