add core features

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
           </article>
         </div>
       </section>
+      <section class="features">
+        <h1>Many Good Reasons to Stick Around</h1>
+        <ul>
+          <li>
+            <div class="feature__image"></div>
+            <p>3,857,000 Trusting Customers</p>
+          </li>
+          <li>
+            <div class="feature__image"></div>
+            <p>99.999% Uptime Guarantee</p>
+          </li>
+          <li>
+            <div class="feature__image"></div>
+            <p>Lightning Fast CDN</p>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
