--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </head>
 
   <body>
-    <main>
-      <header class="main-header">
+    <header class="main-header">
         <div>
           <a href="index.html" class="main-header__brand"> uHost </a>
         </div>
@@ -28,6 +27,8 @@
           </ul>
         </nav>
       </header>
+    <main>
+      
       <section>
         <h1 id="product-overview">Get the freedom you deserve.</h1>
       </section>
@@ -97,5 +98,15 @@
         </ul>
       </section>
     </main>
+    <footer class="main-footer">
+        <ul>
+            <li>
+                <a href="#">Support</a>
+            </li>
+            <li>
+                <a href="#">Terms of use</a>
+            </li>
+        </ul>
+    </footer>
   </body>
 </html>
