--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./shared.css"/>
   </head>
 
   <body>
