--- a/packages/index.html
+++ b/packages/index.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-        <section class="package">
+        <section class="package" id="plus">
           <a href="#">
             <h1 class="section-title">Our PLUS Plan</h1>
             <h2 class="package__description">The most popular choice of our customers.</h2>
@@ -39,14 +39,15 @@
             </p>
           </a>
         </section>
-        <section class="package">
+        <section class="package" id="free">
           <a href="#">
             <h1 class="section-title">Our FREE Plan</h1>
             <h2 class="package__description">An extremely solid start into our hosting world.</h2>
             <p class="package__feature">Get started immediately at zero cost!</p>
           </a>
         </section>
-        <section class="package package--premium">
+        <div class="clearfix"></div>
+        <section class="package package--premium" id="premium">
           <a href="#">
             <h1 class="section-title">Our PREMIUM Plan</h1>
             <h2 class="package__description">All your enterprise needs. Instant support, guaranteed uptime.</h2>
