--- a/packages/index.html
+++ b/packages/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./packages.css" />
     <link rel="stylesheet" href="../shared.css" />
   </head>
-  
+
   <body>
     <header class="main-header">
       <div>
@@ -29,35 +29,45 @@
       </nav>
     </header>
     <main>
-        <section class="package" id="plus">
-          <a href="#">
-            <h1 class="section-title">Our PLUS Plan</h1>
-            <h2 class="package__description">The most popular choice of our customers.</h2>
-            <p class="package__feature">
-              Benefit from increased storage and faster support to ensure that your
-              mission-critical data and applications are always available!
-            </p>
-          </a>
-        </section>
-        <section class="package" id="free">
-          <a href="#">
-            <h1 class="section-title">Our FREE Plan</h1>
-            <h2 class="package__description">An extremely solid start into our hosting world.</h2>
-            <p class="package__feature">Get started immediately at zero cost!</p>
-          </a>
-        </section>
-        <div class="clearfix"></div>
-        <section class="package package--premium" id="premium">
-          <a href="#">
-            <h1 class="section-title">Our PREMIUM Plan</h1>
-            <h2 class="package__description">All your enterprise needs. Instant support, guaranteed uptime.</h2>
-            <p class="package__feature">
-              The best solution for small to large enterprises. Because hosting
-              shouldn't be in the way!
-            </p>
-          </a>
-        </section>
-      </main>
+      <div class="background">
+      </div>
+      <section class="package" id="plus">
+        <a href="#">
+          <h1 class="section-title">Our PLUS Plan</h1>
+          <h2 class="package__badge">RECOMMENDED</h2>
+          <h2 class="package__description">
+            The most popular choice of our customers.
+          </h2>
+          
+          <p class="package__feature">
+            Benefit from increased storage and faster support to ensure that
+            your mission-critical data and applications are always available!
+          </p>
+        </a>
+      </section>
+      <section class="package" id="free">
+        <a href="#">
+          <h1 class="section-title">Our FREE Plan</h1>
+          <h2 class="package__description">
+            An extremely solid start into our hosting world.
+          </h2>
+          <p class="package__feature">Get started immediately at zero cost!</p>
+        </a>
+      </section>
+      <div class="clearfix"></div>
+      <section class="package package--premium" id="premium">
+        <a href="#">
+          <h1 class="section-title">Our PREMIUM Plan</h1>
+          <h2 class="package__description">
+            All your enterprise needs. Instant support, guaranteed uptime.
+          </h2>
+          <p class="package__feature">
+            The best solution for small to large enterprises. Because hosting
+            shouldn't be in the way!
+          </p>
+        </a>
+      </section>
+    </main>
     <footer class="main-footer">
       <ul>
         <li>
