add logo and style background image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <header class="main-header">
         <div>
-          <a href="index.html" class="main-header__brand"> uHost </a>
+          <a href="./index.html" class="main-header__brand">
+            <img src="../images/uhost-icon.png" />
+          </a>
         </div>
         <nav class="main-nav">
           <ul class="main-nav__items">
@@ -31,7 +33,7 @@
     <main>
       
       <section>
-        <h1 id="product-overview">Get the freedom you deserve.</h1>
+        <h1 id="product-overview"><span>Get the freedom you deserve.</span></h1>
       </section>
       <section>
         <h1 class="section-title">Choose your plans</h1>
