--- a/packages/index.html
+++ b/packages/index.html
@@ -12,7 +12,9 @@
   <body>
     <header class="main-header">
       <div>
-        <a href="../index.html" class="main-header__brand"> uHost </a>
+        <a href="../index.html" class="main-header__brand">
+          <img src="../images/uhost-icon.png" />
+        </a>
       </div>
       <nav class="main-nav">
         <ul class="main-nav__items">
@@ -29,8 +31,7 @@
       </nav>
     </header>
     <main>
-      <div class="background">
-      </div>
+      <div class="background"></div>
       <section class="package" id="plus">
         <a href="#">
           <h1 class="section-title">Our PLUS Plan</h1>
@@ -38,7 +39,7 @@
           <h2 class="package__description">
             The most popular choice of our customers.
           </h2>
-          
+
           <p class="package__feature">
             Benefit from increased storage and faster support to ensure that
             your mission-critical data and applications are always available!
