--- a/customers/index.html
+++ b/customers/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
-    <link rel="stylesheet" href="./packages.css" />
+    <link rel="stylesheet" href="./customers.css" />
     <link rel="stylesheet" href="../shared.css" />
   </head>
 
