--- a/customers/index.html
+++ b/customers/index.html
@@ -31,6 +31,13 @@
       </nav>
     </header>
     <main>
+      <div class="modal">
+        <h1 class="modal__title">Do you want to continue?</h1>
+        <div class="modal__actions">
+            <a href="start-hosting/index.html" class="modal__action">Yes!</a>
+            <button class="modal__action modal__action--negative" type="button">No!</button>
+        </div>
+    </div>
         <div>
             <div class="testimonial" id="customer-1">
                 <div class="testimonial__image-container">
