--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <div class="backdrop"></div>
     <header class="main-header">
         <div>
           <a href="./index.html" class="main-header__brand">
@@ -31,9 +32,17 @@
         </nav>
       </header>
     <main>
-      
+      <div class="modal">
+        <h1 class="modal__title">Do you want to continue?</h1>
+        <div class="modal__actions">
+            <a href="start-hosting/index.html" class="modal__action">Yes!</a>
+            <button class="modal__action modal__action--negative" type="button">No!</button>
+        </div>
+    </div>
       <section>
-        <h1 id="product-overview"><span>Get the freedom you deserve.</span></h1>
+        <div id="product-overview">
+          <div class="tag-line">Get the freedom you deserve!</div>
+        </div>
       </section>
       <section>
         <h1 class="section-title">Choose your plans</h1>
@@ -111,5 +120,6 @@
             </li>
         </ul>
     </footer>
+    <script src="shared.js"></script>
   </body>
 </html>
