--- a/packages/index.html
+++ b/packages/index.html
@@ -10,74 +10,85 @@
   </head>
 
   <body>
-    <header class="main-header">
-      <div>
-        <a href="../index.html" class="main-header__brand">
-          <img src="../images/uhost-icon.png" />
-        </a>
+    <div class="backdrop"></div>
+      <header class="main-header">
+        <div>
+          <a href="../index.html" class="main-header__brand">
+            <img src="../images/uhost-icon.png" />
+          </a>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__items">
+            <li class="main-nav__item">
+              <a href="index.html">Packages</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="../customers/index.html">Customers</a>
+            </li>
+            <li class="main-nav__item main-nav__cta">
+              <a href="../start-hosting/index.html">Start Hosting</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div class="modal">
+          <h1 class="modal__title">Do you want to continue?</h1>
+          <div class="modal__actions">
+              <a href="start-hosting/index.html" class="modal__action">Yes!</a>
+              <button class="modal__action modal__action--negative" type="button">No!</button>
+          </div>
       </div>
-      <nav class="main-nav">
-        <ul class="main-nav__items">
-          <li class="main-nav__item">
-            <a href="index.html">Packages</a>
+        <div class="background"></div>
+        <section class="package" id="plus">
+          <a href="#">
+            <h1 class="section-title">Our PLUS Plan</h1>
+            <h2 class="package__badge">RECOMMENDED</h2>
+            <h2 class="package__description">
+              The most popular choice of our customers.
+            </h2>
+
+            <p class="package__feature">
+              Benefit from increased storage and faster support to ensure that
+              your mission-critical data and applications are always available!
+            </p>
+          </a>
+        </section>
+        <section class="package" id="free">
+          <a href="#">
+            <h1 class="section-title">Our FREE Plan</h1>
+            <h2 class="package__description">
+              An extremely solid start into our hosting world.
+            </h2>
+            <p class="package__feature">
+              Get started immediately at zero cost!
+            </p>
+          </a>
+        </section>
+        <div class="clearfix"></div>
+        <section class="package package--premium" id="premium">
+          <a href="#">
+            <h1 class="section-title">Our PREMIUM Plan</h1>
+            <h2 class="package__description">
+              All your enterprise needs. Instant support, guaranteed uptime.
+            </h2>
+            <p class="package__feature">
+              The best solution for small to large enterprises. Because hosting
+              shouldn't be in the way!
+            </p>
+          </a>
+        </section>
+      </main>
+      <footer class="main-footer">
+        <ul>
+          <li>
+            <a href="#">Support</a>
           </li>
-          <li class="main-nav__item">
-            <a href="../customers/index.html">Customers</a>
-          </li>
-          <li class="main-nav__item main-nav__cta">
-            <a href="../start-hosting/index.html">Start Hosting</a>
+          <li>
+            <a href="#">Terms of use</a>
           </li>
         </ul>
-      </nav>
-    </header>
-    <main>
-      <div class="background"></div>
-      <section class="package" id="plus">
-        <a href="#">
-          <h1 class="section-title">Our PLUS Plan</h1>
-          <h2 class="package__badge">RECOMMENDED</h2>
-          <h2 class="package__description">
-            The most popular choice of our customers.
-          </h2>
-
-          <p class="package__feature">
-            Benefit from increased storage and faster support to ensure that
-            your mission-critical data and applications are always available!
-          </p>
-        </a>
-      </section>
-      <section class="package" id="free">
-        <a href="#">
-          <h1 class="section-title">Our FREE Plan</h1>
-          <h2 class="package__description">
-            An extremely solid start into our hosting world.
-          </h2>
-          <p class="package__feature">Get started immediately at zero cost!</p>
-        </a>
-      </section>
-      <div class="clearfix"></div>
-      <section class="package package--premium" id="premium">
-        <a href="#">
-          <h1 class="section-title">Our PREMIUM Plan</h1>
-          <h2 class="package__description">
-            All your enterprise needs. Instant support, guaranteed uptime.
-          </h2>
-          <p class="package__feature">
-            The best solution for small to large enterprises. Because hosting
-            shouldn't be in the way!
-          </p>
-        </a>
-      </section>
-    </main>
-    <footer class="main-footer">
-      <ul>
-        <li>
-          <a href="#">Support</a>
-        </li>
-        <li>
-          <a href="#">Terms of use</a>
-        </li>
-      </ul>
-    </footer>
+      </footer>
+    
   </body>
 </html>
