--- a/index.html
+++ b/index.html
@@ -6,39 +6,59 @@
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="./main.css" />
-    <link rel="stylesheet" href="./shared.css"/>
+    <link rel="stylesheet" href="./shared.css" />
   </head>
 
   <body>
     <div class="backdrop"></div>
     <header class="main-header">
-        <div>
-          <a href="./index.html" class="main-header__brand">
-            <img src="../images/uhost-icon.png" />
-          </a>
-        </div>
-        <nav class="main-nav">
-          <ul class="main-nav__items">
-            <li class="main-nav__item">
-              <a href="packages/index.html">Packages</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="customers/index.html">Customers</a>
-            </li>
-            <li class="main-nav__item main-nav__cta">
-              <a href="start-hosting/index.html">Start Hosting</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+      <div>
+        <button onclick="toggleButton()" class="toggle-button">
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+          <span class="toggle-button__bar"></span>
+        </button>
+        <a href="./index.html" class="main-header__brand">
+          <img src="../images/uhost-icon.png" />
+        </a>
+      </div>
+      <nav class="main-nav">
+        <ul class="main-nav__items">
+          <li class="main-nav__item">
+            <a href="packages/index.html">Packages</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="customers/index.html">Customers</a>
+          </li>
+          <li class="main-nav__item main-nav__cta">
+            <a href="start-hosting/index.html">Start Hosting</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__items">
+        <li class="mobile-nav__item">
+          <a href="packages/index.html">Packages</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="customers/index.html">Customers</a>
+        </li>
+        <li class="mobile-nav__item mobile-nav__item--cta">
+          <a href="start-hosting/index.html">Start Hosting</a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <div class="modal">
         <h1 class="modal__title">Do you want to continue?</h1>
         <div class="modal__actions">
-            <a href="start-hosting/index.html" class="modal__action">Yes!</a>
-            <button class="modal__action modal__action--negative" type="button">No!</button>
+          <a href="start-hosting/index.html" class="modal__action">Yes!</a>
+          <button class="modal__action modal__action--negative" type="button">
+            No!
+          </button>
         </div>
-    </div>
+      </div>
       <section>
         <div id="product-overview">
           <div class="tag-line">Get the freedom you deserve!</div>
@@ -111,14 +131,14 @@
       </section>
     </main>
     <footer class="main-footer">
-        <ul>
-            <li>
-                <a href="#">Support</a>
-            </li>
-            <li>
-                <a href="#">Terms of use</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="#">Support</a>
+        </li>
+        <li>
+          <a href="#">Terms of use</a>
+        </li>
+      </ul>
     </footer>
     <script src="shared.js"></script>
   </body>
