--- a/packages/index.html
+++ b/packages/index.html
@@ -13,6 +13,11 @@
     <div class="backdrop"></div>
       <header class="main-header">
         <div>
+          <button onclick="toggleButton()" class="toggle-button">
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+          </button>
           <a href="../index.html" class="main-header__brand">
             <img src="../images/uhost-icon.png" />
           </a>
@@ -31,6 +36,19 @@
           </ul>
         </nav>
       </header>
+      <nav class="mobile-nav">
+        <ul class="mobile-nav__items">
+          <li class="mobile-nav__item">
+            <a href="index.html">Packages</a>
+          </li>
+          <li class="mobile-nav__item">
+            <a href="../customers/index.html">Customers</a>
+          </li>
+          <li class="mobile-nav__item mobile-nav__item--cta">
+            <a href="../start-hosting/index.html">Start Hosting</a>
+          </li>
+        </ul>
+      </nav>
       <main>
         <div class="modal">
           <h1 class="modal__title">Do you want to continue?</h1>
@@ -89,6 +107,6 @@
           </li>
         </ul>
       </footer>
-    
+      <script src="../shared.js"></script>
   </body>
 </html>
